Added a fun llama to display the messages

--- a/demo/index.html
+++ b/demo/index.html
@@ -20,7 +20,7 @@
       <h3>Basic llama-message Demo</h3>
       <demo-snippet>
         <template>
-          <llama-message></llama-message>
+          <llama-message message="Llamas Live for 20 years in the wild!"></llama-message>
         </template>
       </demo-snippet>
     </div>
